# wbtech-task00

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/models/: models.rs
