[package]
name = "wbtech-task00"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.6"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# Use tokio postgres with serde support
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
validator = { version = "0.18.1", features = ["derive"] }
postgres-types = { version = "0.2.8", features = ["derive"] }